--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/66585f19b3.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="tree-wrapper"></div>
+    <ul class="tree-wrapper"></ul>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script.js"></script>
   </body>
