--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <ul class="tree-wrapper"></ul>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="services.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
