start Modal class: markup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   </head>
   <body>
     <ul class="tree-wrapper"></ul>
+    <div class="overlay">
+      <div class="modal">
+        <i class="fas fa-times btn-modal-close"></i>
+        <div class="modal-head">
+          Test Heading
+        </div>
+        <div class="modal-body">
+          <p>Test...</p>
+        </div>
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="services.js"></script>
     <script src="script.js"></script>
